[gd_scene load_steps=3 format=3 uid="uid://cvdo6b8x4vup4"]

[ext_resource type="Script" path="res://components/browser/browser.gd" id="1_ykkhu"]
[ext_resource type="PackedScene" uid="uid://bhttdhf6gdmqj" path="res://components/browser/entry.tscn" id="2_lrd3y"]

[node name="Browser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykkhu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "REFRESH
"

[node name="JoinRoomButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "JOIN ROOM"

[node name="CreateRoomButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "CREATE ROOM"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Entry" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_lrd3y")]
layout_mode = 2

[node name="Entry2" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_lrd3y")]
layout_mode = 2

[node name="Entry3" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_lrd3y")]
layout_mode = 2

[node name="Entry4" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_lrd3y")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
